tests/kiama/negative/name_errors/L1/4_condname1.ob
MODULE condname;

BEGIN
    IF bvar THEN
    END
END condname.
